--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,11 +1,13 @@
 apply plugin: "java"
 apply plugin: 'kotlin'
 
-sourceCompatibility = 1.6
+targetCompatibility = 1.8
+sourceCompatibility = 1.8
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 sourceSets.main.java.srcDirs = [ "src/" ]
 sourceSets.test.java.srcDirs = [ "test/" ]
+sourceSets.test.resources.srcDirs = [ "../android/assets/" ]
 
 eclipse.project {
     name = appName + "-core"
